<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2ecc71"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/Username"
        android:inputType="text"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/login"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/LoginBtn" />

        <Button
            android:id="@+id/signup"
            style="@android:style/ButtonBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/SignupBtn" />
    </LinearLayout>

</LinearLayout>