<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2ecc71"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <TextView
        android:id="@+id/tvUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username" />

    <EditText
        android:id="@+id/EtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/Username" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password" />

    <EditText
        android:id="@+id/EtPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password_repeat" />

    <EditText
        android:id="@+id/EtPassword_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/Password_repeat"
        android:inputType="textPassword" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/BtnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button"
        android:text="@string/SignupBtn" />
    </LinearLayout>

    

</LinearLayout>